default-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
spec:
  selector:
    app: comrades-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
