redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name : redis-service 
spec:
  selector:
    app: comrades-app
  type: NodePort
  ports:
    - protocol: 'TCP'
      port: 80
      targetPort: 80
      nodePort: 30002
